# jsonbox-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  main.yml
examples/: basic.rs  errors.rs  hello.rs  hello_jsonbox.rs  test.rs
src/: client.rs  error.rs  lib.rs  query_builder.rs  url.rs
src/client/: mod.rs  query_builder.rs
tests/: client.rs
