[package]
name = "jsonbox"
version = "0.1.2"
authors = ["Yuki Kodama <endflow.net@gmail.com>"]
description = "Rust wrapper for jsonbox.io"
homepage = "https://github.com/kuy/jsonbox-rs"
documentation = "https://docs.rs/jsonbox"
repository = "https://github.com/kuy/jsonbox-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
percent-encoding = "2.1.0"
reqwest = "0.9.20"
serde = "1.0"
serde_json = "1.0"
snafu = "0.5"

[dev-dependencies]
mockito = "0.20"
matches = "0.1.8"

[[example]]
name = "hello"

[[example]]
name = "basic"

[[example]]
name = "errors"
